; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/emma/markeins/extr_irq.c_emma2rh_sw_irq_disable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/emma/markeins/extr_irq.c_emma2rh_sw_irq_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EMMA2RH_SW_IRQ_BASE = common dso_local global i64 0, align 8
@EMMA2RH_BHIF_SW_INT_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @emma2rh_sw_irq_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @emma2rh_sw_irq_disable(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i64, i64* @EMMA2RH_SW_IRQ_BASE, align 8
  %5 = load i32, i32* %2, align 4
  %6 = zext i32 %5 to i64
  %7 = sub nsw i64 %6, %4
  %8 = trunc i64 %7 to i32
  store i32 %8, i32* %2, align 4
  %9 = load i32, i32* @EMMA2RH_BHIF_SW_INT_EN, align 4
  %10 = call i32 @emma2rh_in32(i32 %9)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %2, align 4
  %12 = shl i32 1, %11
  %13 = xor i32 %12, -1
  %14 = load i32, i32* %3, align 4
  %15 = and i32 %14, %13
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* @EMMA2RH_BHIF_SW_INT_EN, align 4
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @emma2rh_out32(i32 %16, i32 %17)
  ret void
}

declare dso_local i32 @emma2rh_in32(i32) #1

declare dso_local i32 @emma2rh_out32(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
